--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
                 </div>
 
                 <div class="nav__toggle" id="nav-toggle">
-                    <i class='bx bx-menu'></i>
+                    <i class='bx bx-menu'></i> 
+                    <ul class="nav__list">
+                        <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
+                        <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+                        <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
+                        <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
+                        <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
+                        <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                    </ul>
                 </div>
             </nav>
         </header>
@@ -261,5 +269,6 @@
             </div>
             <p>&#169; 2022 copyright all right reserved</p>
         </footer>
+        <script src="app.js"></script>
     </body>
 </html>
