--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="" class="home__social-icon"><i class='bx bxl-facebook''></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://www.facebook.com/markvinz.pocson/" class="home__social-icon" target="_blank"><i class='bx bxl-facebook''></i></a>
+                    <a href="https://www.linkedin.com/in/marvin-monreal-33aab9230/" class="home__social-icon" target="_blank"><i class='bx bxl-linkedin' ></i></a>
+                    <a href="https://github.com/UrLostBoy" class="home__social-icon" target="_blank"><i class='bx bxl-github' ></i></a>
                 </div>
 
                 <div class="home__img">    
@@ -160,7 +160,6 @@
                           <p class="text-title">UI/UX Designing</p>
                           <p class="text-body">I usually design webpages and mobile app layouts and its user experience. Using this skill to bring beautiful and quality interfaces.</p>
                         </div>
-                        <button class="services-button">More info</button>
                     </div>
 
                     <div class="services">
@@ -169,7 +168,6 @@
                           <p class="text-title">Graphic Designing</p>
                           <p class="text-body">I create t-shirt design as well as logos in any kind. I make aesthetically pleasing or beeautiful posters and illustrations also.</p>
                         </div>
-                        <button class="services-button">More info</button>
 
                     </div>
                     <div class="services">
@@ -178,7 +176,6 @@
                           <p class="text-title">Front-End Web Dev</p>
                           <p class="text-body">Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to have good design.</p>
                         </div>
-                        <button class="services-button">More info</button>
                     </div>
 
                 
@@ -198,7 +195,7 @@
                           <div class="project-info">
                             <p class="text-title">Portfolio Webpage</p>
                             <p class="text-body">A responsive Portfolio Webpage Task.</p>
-                            <button class="project-button">Read More</button>
+                            <button class="project-button"><a href="https://github.com/UrLostBoy/Responsive-Porfolio" target="_blank">Github</a></button>
                           </div>
                         </div>
 
@@ -209,7 +206,7 @@
                               <div class="project-info">
                                 <p class="text-title">Registration Form</p>
                                 <p class="text-body">A Registration form with a register validation</p>
-                                <button class="project-button">Read More</button>
+                                <button class="project-button"><a href="https://github.com/UrLostBoy/registration-form" target="_blank">Github</a></button>
                               </div>
                             </div>
 
@@ -220,7 +217,7 @@
                                 <div class="project-info">
                                 <p class="text-title">Dashboard</p>
                                 <p class="text-body">A single page Dashboard for the Administrator</p>
-                                <button class="project-button">Live Demo</button>
+                                <button class="project-button"><a href="https://github.com/UrLostBoy/dashboard" target="_blank">Github</a></button>
                                 </div>
                         </div>
                 </div>
@@ -254,9 +251,9 @@
         <footer class="footer">
             <p class="footer__title">Vin Monreal</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://www.facebook.com/markvinz.pocson/" class="footer__icon" target="_blank"><i class='bx bxl-facebook' ></i></a>
+                <a href="https://www.instagram.com/vinmreal/" class="footer__icon" target="_blank"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://twitter.com/vinreal2" class="footer__icon" target="_blank"><i class='bx bxl-twitter' ></i></a>
             </div>
             <p>&#169; 2022 copyright all right reserved</p>
         </footer>
